# egoboo

./: BUGS  BUGS.txt  Changelog.txt  Doxyfile  Egoboo.workspace  Egoboo_vs7.sln  Makefile  Makefile.am  README.CodeBlocks  configure.ac  egoboo_vs10.sln  event.c  event.h  run_astyle.sh  sdlgl.c  sdlgl.h  sdlglstr.c  sdlglstr.h  test_event.c
Dev 2/: EgoScript.py  EgoScript.txt  ObjBaker.py  Tooltip.py
Dev 2/Images/: Thumbs.db
Dev 2/Images/FileManager/: Thumbs.db
Dev 2/Images/temp/: Thumbs.db
basicdat/: aicodes.txt
doxygen/: Doxyfile
editor/: EgoEditor_vs10.sln
editor/data/: controls.cfg  editor.cfg  setup.cfg
editor/docs/: changelog.txt  editor_howto.html  todo_list.html
editor/docs/howto/: dialog_new.html  index.html
editor/module/gamedat/: level.mpd  menu.txt
editor/src/: EgoEditor.vcxproj  EgoEditor.vcxproj.filters  EgoEditor_vs10.sln  ai.c  ai.h  char.c  char.h  editdraw.c  editdraw.h  editfile.c  editfile.h  editmain.c  editmain.h  editor.c  editor.h  egodefs.h  egofont.h  egomap.c  egomap.h  game.c  game.h  idsz.h  idsz_map.h  menu.c  misc.c  misc.h  msg.c  msg.h  particle.c  particle.h  player.h  sdlgl.c  sdlgl.h  sdlgl3d.c  sdlgl3d.h  sdlglcfg.c  sdlglcfg.h  sdlglfld.c  sdlglfld.h  sdlglmd2.c  (+7 more)
egoboo/enet/: Makefile
egoboo/game/: Makefile  camera.c  char.c  ego.i  ego_wrap.c  ego_wrapoff.c  egoboo.c  egoboo.h  egoboo_config.h  egoboo_console.c  egoboo_fileutil.c  egoboo_setup.c  egoboo_setup.h  egoboo_strutil.c  egoboo_vfs.c  egoboo_vfs.h  file_common.c  file_common.h  font_bmp.c  font_ttf.c  game.c  graphic.c  input.h  log.c  lua_console.c  mad.c  md2.c  menu.c  menu.h  mesh.c  particle.c  profile.c  profile.h  script.c  script_compile.c  script_compile.h  script_functions.c  sound.c  system.h  ui.c
egoboo/game/Obsolete/: egoboo_fileutil.c  egoboo_vfs.c
egoboo/game/extensions/: ogl_texture.c
egoboo/game/file_formats/: configfile.c  configfile.h  controls_file.c  id_md2.c  mpd_file.c  spawn_file.c  wawalite_file.c
egoboo/game/platform/: file_mac.m  sys_linux.c  sys_mac.m
egoboo/osx/: Info.plist  SDLMain.m
egoboo/osx/Egoboo.xcodeproj/: project.pbxproj
egoboo/osx/English.lproj/: InfoPlist.strings
enet/: ChangeLog  Makefile.am  README  callbacks.c  configure.ac  enet.cbp  enet.layout  enet_vs10.vcxproj  enet_vs10.vcxproj.filters  enet_vs7.cbp  enet_vs7.vcproj  enet_vs8.vcproj  enet_vs9.vcproj  host.c  list.c  packet.c  peer.c  protocol.c  unix.c  win32.c
enet/docs/: install.dox  mainpage.dox
enet/include/enet/: callbacks.h
game/: AStar.c  AStar.h  ChrList.c  ChrList.cpp  ChrList.h  ChrList.inl  Client.c  Client.h  Clock.c  Clock.h  EncList.c  EncList.cpp  EncList.h  EncList.inl  Font.c  Font.h  Frustum.c  Frustum.h  IDSZ_map.c  IDSZ_map.h  Log.c  Log.h  Mad.c  Mad.h  MainLoop.c  Makefile  Makefile.am  Makefile.lua  Makefile.unix  Makefile_Amiga  Md2.c  Md2.h  Md2.inl  Menu.c  Menu.h  NetFile.c  NetFile.h  Network.c  Network.h  Network.inl  (+278 more)
game/Fluid_Studios_Memory_Manager/: mmgr.cpp  mmgr.h  nommgr.h
game/Obsolete/: code_2.6.x.c
game/extensions/: SDL_GL_extensions.c  SDL_GL_extensions.h  SDL_extensions.c  SDL_extensions.h  ogl_debug.c  ogl_debug.h  ogl_extensions.c  ogl_extensions.h  ogl_include.c  ogl_include.h  ogl_texture.c  ogl_texture.h
game/file_formats/: SDL_md2.c  SDL_md2.h  cap_file.c  cap_file.h  configfile.c  configfile.h  controls_file.c  controls_file.h  eve_file.c  eve_file.h  id_md2.c  id_md2.h  id_normals.inl  module_file.c  module_file.h  mpd_file.c  mpd_file.h  passage_file.c  passage_file.h  pip_file.c  pip_file.h  scancode_file.c  scancode_file.h  spawn_file.c  spawn_file.h  template.c  template.h  treasure_table_file.c  treasure_table_file.cpp  treasure_table_file.h  wawalite_file.c  wawalite_file.h
game/inspirational/: Task.c  Task.h  Ticker.c  Ticker.h  Timer.h  cartman.c  cartman.h
game/lua/: ego.i
game/obsolete/: cartman_mouse3.c  cartman_scale.c  cartman_standard.c  old_Client.c  old_Client.h  old_Network.h  old_Server.c  old_Server.h  old_network.c
game/platform/: file_linux.c  file_win.c  sys_linux.c  sys_mac.c  sys_win32.c
modbaker/: COMPILING  INSTALL  NOTES  modbaker.cfg  modbaker_vs7.sln  modbaker_vs9.sln
modbaker/doc/: code_style.html  controls.html  documentation.css  edit.html  frustum.html  general.html  global.html  index.html  manual.html  mesh.html  modbaker.html  renderer.html  todo.html  utility.html
modbaker/doc.doxygen/: doxygen.cfg
modbaker/doc.doxygen/html/: SDL__GL__extensions_8h-source.html  SDL__extensions_8h-source.html  annotated.html  classc__camera-members.html  classc__camera.html  classc__input__handler-members.html  classc__input__handler.html  classc__mb__button-members.html  classc__mb__button.html  classc__mb__container-members.html  classc__mb__container.html  classc__mb__image__button-members.html  classc__mb__image__button.html  classc__mb__image__loader-members.html  classc__mb__image__loader.html  classc__mb__label-members.html  classc__mesh.html  (+99 more)
modbaker/src/: Makefile  SDL_GL_extensions.c  SDL_GL_extensions.cpp  SDL_GL_extensions.h  SDL_extensions.c  SDL_extensions.cpp  SDL_extensions.h  controls.cpp  controls.h  edit.cpp  edit.h  frustum.cpp  frustum.h  general.h  global.cpp  global.h  mesh.cpp  mesh.h  mesh_misc.cpp  modbaker.cpp  modbaker.h  modbaker_vs7.vcproj  modbaker_vs9.vcproj  ogl_debug.c  ogl_debug.cpp  ogl_debug.h  ogl_extensions.c  ogl_extensions.cpp  ogl_extensions.h  ogl_include.c  ogl_include.h  os_linux.cpp  renderer.cpp  renderer.h  renderer_base.cpp  renderer_camera.cpp  renderer_misc.cpp  renderer_primitives.cpp  utility.cpp  utility.h  (+2 more)
objbaker/: datatest.py  objbaker.py
objbaker/ObjBaker/: About.py  Images.py  _EgoObjData.py  _EgoObject.py  _Error.py  _MainWindow.py  _Templater.py  __init__.py
objbaker/templates/: data.txt.tmpl
prtkitch/: egodefs.h  idsz.c  idsz.h  particle.c  particle.h  platform.h  prtkitch.c  prtkitch.cfg  render3d.c  render3d.h  sdlgl3d.c  sdlgl3d.h  sdlglcfg.c  sdlglstr.c
res/: egoboo.rc
script/: aicodes.txt  decode_t.c  decode_t.h  evcoddef.h  level1.txt  level1.unc  level1__.txt  script.h
(+34 files in other folders)
