AC_INIT(egoboo, 2.7.8)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

PKG_CHECK_MODULES(Enter new module, sdl)
AC_SUBST(Enter new module_CFLAGS)
AC_SUBST(Enter new module_LIBS)

PKG_CHECK_MODULES(EGOBOO, sdl)
AC_SUBST(EGOBOO_CFLAGS)
AC_SUBST(EGOBOO_LIBS)

AC_OUTPUT([
Makefile
game/Makefile
])
