
bin_PROGRAMS = \
	egoboo-2.7.7

egoboo_2_7_7_SOURCES = \
	AStar.c       \
	AStar.h       \
	camera.c       \
	camera.h       \
	char.c       \
	char.h       \
	char.inl       \
	Client.c       \
	Client.h       \
	Clock.c       \
	Clock.h       \
	configfile.c       \
	configfile.h       \
	egoboo.h       \
	egoboo_config.h       \
	egoboo_math.c       \
	egoboo_math.h       \
	egoboo_math.inl       \
	egoboo_rpc.c       \
	egoboo_rpc.h       \
	egoboo_strutil.c       \
	egoboo_strutil.h       \
	egoboo_types.c       \
	egoboo_types.h       \
	egoboo_types.inl       \
	egoboo_utility.c       \
	egoboo_utility.h       \
	enchant.c       \
	enchant.h       \
	file_common.c       \
	file_lin.c       \
	Font.c       \
	Font.h       \
	Frustum.c       \
	Frustum.h       \
	game.c       \
	game.h       \
	graphic.c       \
	graphic.h       \
	graphic.inl       \
	graphic_fan.c       \
	graphic_mad.c       \
	graphic_prt.c       \
	id_md2.h       \
	id_normals.c       \
	id_normals.h       \
	input.c       \
	input.h       \
	input.inl       \
	Log.c       \
	Log.h       \
	Mad.c       \
	Mad.h       \
	Md2.c       \
	Md2.h       \
	Md2.inl       \
	Menu.h       \
	menu.c       \
	mesh.c       \
	mesh.h       \
	mesh.inl       \
	module.c       \
	module.h       \
	NetFile.c       \
	NetFile.h       \
	Network.h       \
	Network.inl       \
	network.c       \
	object.c       \
	object.h       \
	object.inl       \
	ogl_include.c       \
	ogl_include.h       \
	ogl_texture.c       \
	ogl_texture.h       \
	particle.c       \
	particle.h       \
	particle.inl       \
	passage.c       \
	passage.h       \
	Physics.c       \
	Physics.h       \
	Physics.inl       \
	proto.h       \
	script.c       \
	script.h       \
	SDL_GetPixel.c       \
	SDL_Pixel.h       \
	SDL_PutPixel.c       \
	SDL_rotozoom.c       \
	SDL_rotozoom.h       \
	Server.c       \
	Server.h       \
	sound.c       \
	sound.h       \
	System.h       \
	System_lin.c       \
	Task.c       \
	Task.h       \
	Ticker.c       \
	Ticker.h       \
	Timer.c       \
	Timer.h       \
	Ui.c       \
	Ui.h

egoboo_2_7_7_DEPENDENCIES = \
	../enet/callbacks.o \
	../enet/host.o \
	../enet/list.o \
	../enet/packet.o \
	../enet/peer.o \
	../enet/protocol.o \
	../enet/unix.o

egoboo_2_7_7_LDFLAGS = \
	$(shell \
	sdl-config \
	--ldflags)$

egoboo_2_7_7_CFLAGS = \
	$(shell \
	sdl-config \
	--cflags)$

egoboo_2_7_7_LDADD = \
	-lSDL_ttf \
	-lSDL_mixer \
	-lSDL_image \
	-lGL \
	-lGLU

INCLUDES = \
	-I../enet/include

## File created by the gnome-build tools

